--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,16 +1,78 @@
 @import "_normalize";
 @import "_variables";
-
+@import url("https://fonts.googleapis.com/css?family=Roboto:500,700&display=swap&subset=latin-ext");
 
 html {
   box-sizing: border-box;
+  background: $darkblue;
 }
 
-*, *:before, *:after {
+*,
+*:before,
+*:after {
   box-sizing: inherit;
 }
 
 body {
-  color: $yellow;
-  background: $violet;
+  color: $black;
+  background: $grey;
+  min-height: 100vh;
+  padding: 16px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-family: "Roboto", sans-serif;
 }
+
+.main {
+  background: $darkblue;
+  min-height: 100vh;
+  width: 100%;
+  max-width: 375px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.counter {
+  margin: 203px 48px 0 47px;
+  width: 280px;
+  height: 280px;
+  background: url("../assets/img/water-glass.svg") center center;
+  background-size: contain;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  &__value {
+    font-style: normal;
+    font-weight: 500;
+    font-size: 112px;  
+    padding-top: 64px;
+  }
+}
+
+.button-add {
+  margin: 48px auto 37px auto;
+  padding: 12px; 
+  border-radius: 4px;
+  border: none;
+  background: #fff;
+  min-width: 214px;
+  height: 47px;
+  font-weight: 500;
+  font-size: 18px;  
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.button-delete { 
+  color: $buttongrey;
+  background-color: Transparent;
+  border: none;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+}
+
+// 20 min
